# UR5e-Robotiq-Integrated-Driver

./: .gitignore  README.md
colcon_ws/src/rvl_robot_description/: CMakeLists.txt  package.xml
colcon_ws/src/rvl_robot_description/config/: view_robot.rviz
colcon_ws/src/rvl_robot_description/config/robotiq/2f_140/: joint_parameters.yaml
colcon_ws/src/rvl_robot_description/config/robotiq/2f_85/: joint_parameters.yaml
colcon_ws/src/rvl_robot_description/config/universal_robots/ur20/: visual_parameters.yaml
colcon_ws/src/rvl_robot_description/config/universal_robots/ur30/: visual_parameters.yaml
colcon_ws/src/rvl_robot_description/launch/: rvl_moveit.launch.py  rvl_ur_control.launch.py  view_robot.launch.py
colcon_ws/src/rvl_robot_description/tests/: test_robot_urdf_xacro.py  test_view_robot_launch.py
colcon_ws/src/rvl_robot_description/xacro/: rvl_ur.xacro
colcon_ws/src/rvl_robot_description/xacro/intel_realsense/: _l515.urdf.xacro
colcon_ws/src/rvl_robot_description/xacro/universal_robots/: ur.urdf.xacro  ur_macro.xacro
colcon_ws/src/rvl_robotiq_driver/: setup.py
colcon_ws/src/rvl_robotiq_driver/config/: calibration.yaml
colcon_ws/src/rvl_robotiq_msgs/: package.xml
docker/: Dockerfile  build.sh  run.sh
